2007-04-24  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.cc (color_property): Eliminate alpha channel from RGB
	color spec.

2007-04-23  Shai Ayal  <shaiay@users.sourceforge.net>

	* src/graphics.cc (color_property::color_property):
	New arg A for alpha channel.  Set rgba instead of red, green, blue.
        (color_property::color_property (char)): New constructor.
        (color_propery::rgba): New data member.
	(color_property::red, color_property::green, color_property::blue):
	Delete.
        (color_property::validate): Use rgba.
        (color_property::c2rgba): New function.

2007-04-23  Soren Hauberg  <soren@hauberg.org>

	* data.cc (Fsize_equal): Allow more than two arguments.

2007-04-20  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__gnuplot_raw__.l (deftypefn): 
	(Vautomatic_replot): Delete static variable.
	(Fautomatic_replot): Delete function.

	* toplev.cc (Fcasesen): Delete obsolete function.

	* DLD-FUNCTIONS/__gnuplot_raw__.l (gnuplot::makeplot): Check
	whether caller is "splot", not "gsplot".

2007-04-19  John W. Eaton  <jwe@octave.org>

	* lex.l (is_keyword_token): Delete all_va_args_kw switch case.
	* octave.gperf: Remove all_va_args_kw from the list.

2007-04-19  Daniel J. Sebald  <daniel.sebald@ieee.org>

	* syscalls.cc: Fix popen2 test to stop trying after 100 times
	throught the loop.

2007-04-16  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* ov-fcn-inline.cc (Fargnames): Doc fix.

2007-04-13  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* DLD-FUNCTIONS/find.cc (Ffind): Doc fix.

2007-04-11  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DOCSTRINGS): Don't echo commands.
	(doc-files): Use mv, not $(simple-move-if-change-rule).

	* data.cc (Fnot, Fuplus, Fuminus, Ftranspose, Fctranspose, Fplus,
	Fminus, Fmtimes, Fmrdivide, Fmpower, Fmldivide, Flt, Fle, Feq,
	Fge, Fgt, Fne, Ftimes, Frdivide, Fpower, Fldivide, Fand, For):
	New functions.

2007-04-09  John W. Eaton  <jwe@octave.org>
