@@ -1,3 +1,7 @@
+2007-04-26  John W. Eaton  <jwe@octave.org>
+
+	* load-save.cc (find_file_to_load): Only consider regular files.
+
 2007-04-24  Shai Ayal  <shaiay@users.sourceforge.net>
 
 	* graphics.cc (color_property): Eliminate alpha channel from RGB
